--- a/journal-writings/modernized/03-chapter-1.adoc
+++ b/journal-writings/modernized/03-chapter-1.adoc
@@ -1,10 +1,11 @@
-== CHAPTER I.
+== Chapter I.
 
-His birth and parentage,
-with some account of the operations of Divine grace on his mind in his youth--his
-first appearance in the ministry --considerations while young on keeping slaves.
+[.chapter-synopsis]
+* His birth and parentage, with some account of the operations of Divine grace on his mind in his youth
+* his first appearance in the ministry
+* considerations while young on keeping slaves.
 
-I HAVE often felt a motion of love to leave some hints
+I have often felt a motion of love to leave some hints
 in writing of my experience of the goodness of God;
 and now, in the thirty-sixth year of my age, I begin this work.
 
@@ -340,8 +341,8 @@ but though I would gladly have been excused, yet I could not feel my mind clear.
 
 The exercise was heavy: and as I was reading what the Almighty said to Ezekiel,
 respecting his duty as a watchman, the matter was set home more clearly; and then,
-with prayers and tears, I besought the Lord for his assistance, who, in loving-kindness,
-gave me a resigned heart.
+with prayers and tears, I besought the Lord for his assistance,
+who, in loving-kindness, gave me a resigned heart.
 Then, at a suitable opportunity, I went to the public-house;
 and seeing the man amongst much company, I went to him,
 and told him I wanted to speak with him; so we went aside, and there,
@@ -375,4 +376,3 @@ I still believed the practice was not right; and desired to be excused from the 
 I spoke to him in good will; and he told me,
 that keeping slaves was not altogether agreeable to his mind;
 but that the slave being a gift made to his wife, he had accepted of her.
-
