finished-john-woolman

--- a/journal-writings/modernized/03-chapter-1.adoc
+++ b/journal-writings/modernized/03-chapter-1.adoc
@@ -2,8 +2,8 @@
 
 [.chapter-synopsis]
 * His birth and parentage, with some account of the operations of Divine grace on his mind in his youth
-* his first appearance in the ministry
-* considerations while young on keeping slaves.
+* His first appearance in the ministry
+* Considerations while young on keeping slaves.
 
 I have often felt a motion of love to leave some hints
 in writing of my experience of the goodness of God;
