--- a/journal-writings/modernized/04-chapter-2.adoc
+++ b/journal-writings/modernized/04-chapter-2.adoc
@@ -2,12 +2,12 @@
 
 [.chapter-synopsis]
 * His first journey, on a religious visit, into East Jersey, in company with Abraham Farrington
-* thoughts on merchandizing, and learning a trade
-* second journey, with Isaac Andrews, into Pennsylvania, Maryland, Virginia, and North Carolina
-* third journey, with Peter Andrews, through part of West and East Jersey
-* some account of his sister Elizabeth, and her death
-* fourth journey, with Peter Andrews, through New York and Long Island, to New England
-* fifth journey, with John Sykes, to the Eastern Shore of Maryland, and the lower counties on Delaware.
+* Thoughts on merchandizing, and learning a trade
+* Second journey, with Isaac Andrews, into Pennsylvania, Maryland, Virginia, and North Carolina
+* Third journey, with Peter Andrews, through part of West and East Jersey
+* Some account of his sister Elizabeth, and her death
+* Fourth journey, with Peter Andrews, through New York and Long Island, to New England
+* Fifth journey, with John Sykes, to the Eastern Shore of Maryland, and the lower counties on Delaware.
 
 My esteemed friend Abraham Farrington,
 being about to make a visit to Friends on the eastern side of this province,
